# odinKitServer

./: README.md
code/: BIServer.cpp  (+4 more)
code/server/: CMakeLists.txt  odin.cmake  odinKitServer.sln
code/server/BIServer/: BIServer.vcxproj  BIServer.vcxproj.filters  CMakeLists.txt
code/server/BIServer/include/: AnalysisModule.h  BIServer.h  ManageModule.h
code/server/BIServer/source/: AnalysisModule.cpp  BIServer.cpp  ManageModule.cpp  main.cpp
code/server/CentralServer/: CMakeLists.txt  CentralServer.cpp  CentralServer.h  CentralServer.vcxproj  CentralServer.vcxproj.filters  CentralServerMgr.cpp  CentralServerMgr.h  main.cpp
code/server/DataServer/: CMakeLists.txt  DataServer.cpp  DataServer.vcxproj  DataServer.vcxproj.filters  main.cpp
code/server/DataServer/include/: DataModule.h  DataServer.h  LoadModule.h  metadata.h
code/server/DataServer/source/: DataModule.cpp  DataServer.cpp  LoadModule.cpp  metadata.cpp
code/server/GameServer/: CMakeLists.txt  GameServer.cpp  GameServer.vcxproj  GameServer.vcxproj.filters  ReadMe.txt  main.cpp  stdafx.h
code/server/GameServer/include/: DataModule.h  DebugModule.h  Event.h  EventUnit.h  Fighter.h  GameServer.h  Hero.h  HeroMgr.h  IBaseObj.h  Item.h  ItemMgr.h  ItemTemplate.h  ItemUnit.h  LoginModule.h  LuaFuncDefine.h  NameText.h  NoticeModule.h  Player.h  PlayerMgr.h  Role.h  RoleTemplate.h  TimerModule.h  User.h  UserMgr.h  attrs.h  attrs_defines.h
code/server/GameServer/source/: DataModule.cpp  DebugModule.cpp  Event.cpp  EventUnit.cpp  Fighter.cpp  GameServer.cpp  IBaseObj.cpp  Item.cpp  ItemTemplate.cpp  ItemUnit.cpp  LoginModule.cpp  LuaCommon.cpp  NameText.cpp  NoticeModule.cpp  Player.cpp  PlayerMgr.cpp  Role.cpp  RoleTemplate.cpp  TimerModule.cpp  attrs.cpp
code/server/GateServer/: CMakeLists.txt  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  main.cpp
code/server/GateServer/include/: GateNet.h  GateServer.h  UserMgr.h
code/server/GateServer/source/: GateNet.cpp  GateServer.cpp  UserMgr.cpp
code/server/LoginServer/: CMakeLists.txt  LoginServer.cpp  LoginServer.vcxproj  LoginServer.vcxproj.filters  main.cpp
code/server/LoginServer/include/: DBOperate.h  LoginNet.h  LoginServer.h  UserMgr.h  WorldConfig.h  http_message_handler.h
code/server/LoginServer/source/: #UserMgr.cpp#  DBOperate.cpp  LoginNet.cpp  LoginServer.cpp  UserMgr.cpp  UserMgr.cpp~  WorldConfig.cpp  http_message_handler.cpp
code/server/PaymentServer/: CMakeLists.txt  PaymentServer.vcxproj  PaymentServer.vcxproj.filters
code/server/PaymentServer/include/: GameWorldMgr.h  PaymentVerifyModule.h  plugin_httpServeHandler.h
code/server/PaymentServer/source/: GameWorldMg.cpp  PaymentServer.cpp  PaymentVerifyModule.cpp
code/server/ServerCore/: CMakeLists.txt  ReadMe.txt  ServerCore.vcxproj  ServerCore.vcxproj.filters  ServerCoreInc.h  dllmain.cpp  servercore.h  stdafx.cpp  stdafx.h
code/server/ServerCore/include/: CommDef.h  CommandMgr.h  DBCache.h  DBResult.h  GameObj_Json.h  HttpServer.h  MainServer.h  NetClient.h  NetServer.h  PluginHandler.h  Plugin_HttpServe.h  ServerMgr.h  metadata.h  plugin.h  pluginHandler.h  plugin_HttpServe.h  plugin_Mongodb.h  plugin_Monitor.h  plugin_Network.h  plugin_ServerMgr.h  server.h
code/server/ServerCore/source/: CommandMgr.cpp  DBCache.cpp  DBResult.cpp  GameObj_Json.cpp  HttpServer.cpp  MainServer.cpp  NetClient.cpp  NetServer.cpp  Plugin_HttpServe.cpp  ServerMgr.cpp  metadata.cpp  plugin_HttpServe.cpp  plugin_Mongodb.cpp  plugin_Monitor.cpp  plugin_Network.cpp  plugin_ServerMgr.cpp  server.cpp
code/server/bak/: DBCache.cpp  DataModule.cpp  DataModule.h  plugin_Mongodb.cpp  plugin_Mongodb.h
code/server/common/: ObjMgr.h  commdata.h  eventdef.h
code/server/message/: CMakeLists.txt
code/server/shared/: CMakeLists.txt  shared.h  shared.vcxproj  shared.vcxproj.filters
code/server/shared/config/: CSVParser.cpp  CSVParser.h
code/server/shared/container/: ClxHash.h  ClxHlist.h  selectablequeue.h  utlbuffer.cpp  utldict.h  utlfixedmemory.h  utllinkedlist.h  utlmap.h  utlmultilist.h  utlpriorityqueue.h  utlsymbol.h  utlvector.h
code/server/shared/httpd/: httpd.c  httpd.h
code/server/shared/include/: Compression.h  IOCP.h  Lock.h  Log.h  MysqlCore.h  MysqlDefine.h  Net.h  NetMonitor.h  NetObservable.h  OrderedList.h  SignalHandler.h  Singleton.h  SocketOps.h  ThreadLibFunctions.h  console.h  cpu.h  exception.h  extendedtrace.h  fasttimer.h  linux_time.h  linux_type.h  md5.h  memorypool.h  mongo_interface.h  random.h  stllist.h  stlmap.h  utlMD5.h  utlbidirectionalset.h  utlbuffer.h  utldoublequeue.h  utldoublestack.h  utlfixedlinkedlist.h  utlmemory.h  utlrbtree.h  vprof.h
code/server/shared/memory/: memory.cpp  memory.h
code/server/shared/mongoose/: mongoose.c
code/server/shared/network/: IOCP.cpp  IOEpoll.cpp  IOEpoll.h  IOSelect.cpp  IOSelect.h  Net.cpp  Net.h  NetHeader.h  Packet.cpp  Packet.h  RingBuffer.cpp  RingBuffer.h  Socker.cpp  Socker.h  SocketNet.h  SocketOpsLinux.cpp
code/server/shared/rapidjson/: rapidjson.h  stringreference.h
code/server/shared/source/: Compression.cpp  IOCP.cpp  IOEpoll.cpp  IOSelect.cpp  LuaEngine.cpp  MysqlCore.cpp  Net.cpp  NetMonitor.cpp  Packet.cpp  SocketOpsWin.cpp  ThreadLibFunctions.cpp  base64.cpp  cpu.cpp  exception.cpp  extendedtrace.cpp  linux_time.cpp  md5.cpp  mongo_interface.cpp  monitor.cpp  strtools.cpp  utlMD5.cpp  utlsymbol.cpp
code/server/shared/thread/: Atomic.h  Lock.h  ThreadException.h  ThreadLibFunctions.h  threadpool.c
code/server/shared/util/: Compression.h  Log.cpp  Log.h  LuaEngine.h  PathFunc.cpp  PathFunc.h  SignalHandler.h  base64.h  console.cpp  crc.cpp  crc.h  fasttimer.cpp  gtime.cpp  gtime.h  linux_cpu.cpp  monitor.h  platform.h  random.cpp  strtools.h  udsvr.cpp  udsvr.h  vprof.cpp  vprof.h
code/server/tools/RobotPlus/: LuaFunc.cpp  PacketParser.h  ReadMe.txt  RobotMgr.h  RobotNet.cpp  RobotNet.h  RobotObj.cpp  RobotObj.h  RobotPlus.cpp  RobotPlus.sln  RobotPlus.vcproj  RobotPlus.vcxproj  RobotUnit.h  stdafx.cpp
code/server/tools/bots/: CMakeLists.txt  RobotPlus.vcxproj.filters
(+893 files in other folders)
