cmake_minimum_required(VERSION 2.6)
project(ODIN)

add_subdirectory(${ODIN_SOURCE_DIR}/shared/build)
add_subdirectory(${ODIN_SOURCE_DIR}/message/build)
add_subdirectory(${ODIN_SOURCE_DIR}/ServerCore/build)
add_subdirectory(${ODIN_SOURCE_DIR}/GateServer/build)
add_subdirectory(${ODIN_SOURCE_DIR}/GameServer/build)
add_subdirectory(${ODIN_SOURCE_DIR}/DataServer/build)
add_subdirectory(${ODIN_SOURCE_DIR}/LoginServer/build)
add_subdirectory(${ODIN_SOURCE_DIR}/CentralServer/build)
add_subdirectory(${ODIN_SOURCE_DIR}/BIServer/build)
#add_subdirectory(${ODIN_SOURCE_DIR}/PaymentServer/build)
#add_subdirectory(${ODING_SOURCE_DIR}/test)
