cmake_minimum_required(VERSION 2.6)
project(ODIN)

add_subdirectory(${ODIN_SOURCE_DIR}/shared)
add_subdirectory(${ODIN_SOURCE_DIR}/message)
add_subdirectory(${ODIN_SOURCE_DIR}/ServerCore)
add_subdirectory(${ODIN_SOURCE_DIR}/GateServer)
add_subdirectory(${ODIN_SOURCE_DIR}/GameServer)
add_subdirectory(${ODIN_SOURCE_DIR}/DataServer)
add_subdirectory(${ODIN_SOURCE_DIR}/LoginServer)
add_subdirectory(${ODIN_SOURCE_DIR}/CentralServer)
#add_subdirectory(${ODIN_SOURCE_DIR}/BIServer)
#add_subdirectory(${ODIN_SOURCE_DIR}/PaymentServer)
#add_subdirectory(${ODING_SOURCE_DIR}/test)
